# vertical-landing-test-v1.0

./: .gitignore  CHANGELOG.md  CMakeLists.txt  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  SAVE_SYSTEM_README.md  TESTING_GUIDE.md  build.cmd  build_errors.txt  build_errors_v2.txt  build_log.txt  build_log2.txt  build_log3.json  build_log4.txt  build_log5.txt  build_log6.txt  build_log7.txt  build_log_main.txt  build_log_main2.txt  build_log_main2_utf8.txt  build_log_main3.txt  build_log_main_utf8.txt  build_output.txt  build_output_2.txt  build_output_2_utf8.txt  build_output_3.txt  build_output_3_utf8.txt  build_output_llm.txt  build_output_llm_2.txt  build_output_llm_2_utf8.txt  build_output_llm_utf8.txt  null  temp_build.cmd  test_center_of_lift.cpp  test_center_of_lift_standalone.cpp  test_center_of_mass_standalone.cpp  test_center_of_thrust.cpp  tmp_hex.txt
.kiro/specs/rocket-center-visualization/: .config.kiro  design.md  requirements.md  task-2.2-verification.md  tasks.md  test_results.md
assets/: launchpad.mtl
assets/shaders/: atmo.frag
src/: main.cpp  menu_system.h  project.cpp  rocket_builder.h  save_system.h
src/control/: control_system.cpp  control_system.h
src/core/: localization.h  rocket_state.h
src/math/: math3d.h
src/physics/: physics_system.cpp  physics_system.h
src/render/: hydro_sim.h  model_loader.h  renderer3d.h  renderer_2d.h  tectonic_sim.h  terrain_system.h
src/simulation/: center_calculator.cpp  center_calculator.h  center_calculator_test.cpp  center_visualizer.cpp  center_visualizer.h  factory_system.h  factory_ui.h  maneuver_system.h  orbit_physics.h  predictor.cpp  predictor.h  rocket_builder.h  stage_manager.cpp  stage_manager.h  transfer_calculator.h
vertical-landing-test v1.0/: vertical-landing-test v1.0.vcxproj  vertical-landing-test v1.0.vcxproj.filters
